fixing mobile spacing on hero section v0.0.6

--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,6 @@ body {
 @media only screen and (max-width: 767.99px), only screen and (min-width: 768px) and (max-width: 1198.99px) {
   .l-hero {
     flex-direction: column-reverse;
-    row-gap: 10rem;
   }
 }
 @media only screen and (min-width: 1199px) {
